# hotel-booking-service

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
booking/: filters.py  models.py  serializers.py  signals.py  tasks.py  views.py
booking/migrations/: 0003_alter_booking_id.py  0003_booking_check_out_after_check_in.py
booking/tests/: test_flows.py  test_no_show.py  test_serializers.py  test_tasks.py  test_views.py
guest/: apps.py  models.py  serializers.py  views.py
guest/migrations/: 0002_alter_guest_managers_remove_guest_username_and_more.py
guest/tests/: tests.py
hotel_booking_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
notifications/: models.py  tasks.py
notifications/management/commands/: run_telegram_bot.py
notifications/services/: telegram.py
payment/: exceptions.py  models.py  serializers.py  stripe_helper.py  urls.py  views.py
payment/migrations/: 0002_alter_payment_id.py
payment/services/: payment_service.py  stripe_service.py
payment/tests/: test_serializers.py  test_views.py
room/: admin.py  models.py  serializers.py  tests.py  views.py
room/migrations/: 0002_alter_room_capacity_alter_room_id.py  0002_alter_room_id.py
